--- a/views/pages/projects.twig
+++ b/views/pages/projects.twig
@@ -51,7 +51,15 @@
 										<button id="btn-remove" class="Btn remove-participant" data-user-id="{{ user.id_user }}" style="display:none;">
 											<div class="sign">
 												<svg viewbox="0 0 16 16" class="bi bi-trash3-fill" fill="currentColor" height="18" width="18" xmlns="http://www.w3.org/2000/svg">
-													<path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5.5 0 0 0 .5v-1M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"></path>
+													<path d="M11 1.5 v1 h3.5 a0.5 0.5 0 0 1 0 1 h-0.538 l-0.853 10.66
+														A2 2 0 0 1 11.115 16 h-6.23
+														A2 2 0 0 1 2.89 14.16 L2.038 3.5 H1.5 a0.5 0.5 0 0 1 0-1 H5 v-1
+														A1.5 1.5 0 0 0 3.5 0 v-1
+														M4.5 5.029 l0.5 8.5
+														a0.5 0.5 0 1 0 0.998-0.06 l-0.5-8.5
+														a0.5 0.5 0 1 0-0.998 0.06
+														Z"></path>
+
 												</svg>
 											</div>
 											<div class="text">Supprimer</div>
@@ -70,6 +78,7 @@
 								<div id="selectedFollowersContainer" class="selected-followers-container"></div>
 							</div>
 						{% endif %}
+
 						<div id="btn-update">
 							<button class="save-changes" style="display: none;">Enregistrer</button>
 							<button class="cancel-changes" style="display: none;">Annuler</button>
