--- a/public/assets/css/messagerie.css
+++ b/public/assets/css/messagerie.css
@@ -82,6 +82,14 @@ img {
     color: #a0a0a0;
 }
 
+.menu-icon {
+    position: absolute;
+    right:15%;
+    cursor:pointer;
+    z-index: 1000;
+
+}
+
 .user-item:last-child {
     border-bottom: none;
 }
@@ -196,7 +204,7 @@ img {
 }
 
 @media (max-width: 769px) {
-    h1{
+    h1 {
         margin-top: 10px;
     }
 
