--- a/public/assets/css/messagerie.css
+++ b/public/assets/css/messagerie.css
@@ -215,4 +215,10 @@ img {
     .user-item {
         justify-content: center;
     }
+
+    .menu-icon {
+        position: relative;
+        right:0;
+        margin-bottom: 40px;    
+    }
 }
