--- a/public/assets/css/projects.css
+++ b/public/assets/css/projects.css
@@ -134,23 +134,28 @@ img {
 }
 
 .menu-dropdown {
-    position: absolute;
+    position: relative;
     left: 50%;
     top: 30%;
     transform: translateX(-50%);
-    background-color: #383d41;
-    border-radius: 10px;
+    background-color: #1e1e1e;
+    border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     text-align: center;
     z-index: 1000;
-    width: 200px;
+    width: 300px;
+    max-width: 300px;
 }
 
-.menu-dropdown.show {
-    display: block;
-    animation: fadeIn 0.3s ease-out;
+.menu-dropdown h2{
+    color: #a0a0a0;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.2;
 }
+
+
 
 .menu-btn {
     position: absolute;
