--- a/views/pages/collaboration.twig
+++ b/views/pages/collaboration.twig
@@ -100,7 +100,7 @@
 						</div>
 						<textarea type="text" name="description" placeholder="Description"></textarea><br>
 						<input type="file" name="file" required><br>
-						<button type="submit">Ajouter</button>
+						<button id="btn-add" type="submit">Ajouter</button>
 					</form>
 					<h3>Participants</h3>
 					<ul>
