--- a/views/pages/login.twig
+++ b/views/pages/login.twig
@@ -36,8 +36,8 @@
 					<a href="/forgot-password">Mot de passe oublié ?</a><br>
 					<button type="submit">Se connecter</button>
 					<section>
-						<a href="/register">Si vous n'avez pas de compte, cliquez
-							<span>ICI</span>
+						<a href="/register">Essayer gratuitement 
+							<span>PulseConnect</span>
 						</a>
 					</section>
 				</form>
