--- a/public/assets/css/collaboration.css
+++ b/public/assets/css/collaboration.css
@@ -33,8 +33,8 @@ body {
 .main-content {
     display: flex;
     flex-direction: row;
-    margin-left: 15%;
     gap: 230px;
+    width: 100%;
 }
 
 .layout-container {
@@ -94,8 +94,6 @@ body {
     border-radius: 8px;
     padding: 20px;
     flex: 3;
-    margin-left: 250px;
-    width: 800px;
 }
 
 .feed-container h1 {
@@ -129,6 +127,7 @@ body {
     background-color: #2a2a2a;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    width: 150%;
 }
 
 .members-list h3 {
@@ -402,7 +401,6 @@ form button[type="submit"] {
     margin-top: 23px;
 }
 
-
 form select {
     appearance: none;
     background-image: url('data:image/svg+xml;utf8,<svg fill="%23fff" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
@@ -428,7 +426,7 @@ form button[type="submit"] {
     transition: background-color 0.3s;
 }
 
-form button:hover[type="submit"]{
+form button:hover[type="submit"] {
     background-color: #701010;
 }
 
@@ -437,7 +435,7 @@ form button[type="button"] {
     margin-left: 0;
 }
 
-#btn-add{
+#btn-add {
     background-color: aquamarine;
     color: black;
 }
@@ -513,8 +511,8 @@ form button[type="button"] {
     padding: 20px;
 }
 
-.actions-menu h2{
-    color:#a0a0a0;
+.actions-menu h2 {
+    color: #a0a0a0;
     font-size: 1rem;
     font-weight: 500;
     line-height: 1.2;
@@ -608,10 +606,12 @@ form button[type="button"] {
 .modal-content {
     text-align: center;
 }
-.modal-content h2{
+
+.modal-content h2 {
     color: aquamarine;
 }
-.modal-content p{
+
+.modal-content p {
     color: #a0a0a0;
 }
 
@@ -638,6 +638,7 @@ form button[type="button"] {
         align-items: center;
         margin-left: 0;
         gap: 0;
+        width: 100%;
     }
 
     .feed-container {
@@ -733,4 +734,22 @@ form button[type="button"] {
         top: 50%;
         left: 50%;
     }
+}
+
+@media(max-width:1510px) {
+
+    .feed-container{
+        margin-top: 50px;
+    }
+
+    .toggle-sidebar-btn {
+        display: block;
+        border-radius: 100%;
+    }
+
+    .sidebar-container {
+        display: none;
+
+    }
+
 }
