--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -73,7 +73,6 @@ button {
     font-weight: bold;
     cursor: pointer;
     color: black;
-    transition: background-color 0.3s ease;
 }
 
 button:hover {
@@ -89,9 +88,10 @@ a {
     transition: color 0.3s ease;
 }
 
-a:hover {
-    color: #2bc2d9;
+a:hover{
+    color: aquamarine;
 }
+
 
 span {
     color: aquamarine
