--- a/views/pages/register.twig
+++ b/views/pages/register.twig
@@ -63,10 +63,10 @@
 							<p>{{ error.confirmPassword }}</p>
 						{% endif %}
 					</div>
-					<button type="submit">S'inscrire</button>
+					<button type="submit">Essayer gratuitement</button>
 					<section>
-						<a href="/login">Si vous avez déjà un compte cliquez
-							<span>ICI</span>
+						<a href="/login">Ce connecter à 
+							<span>PulseConnect</span>
 						</a>
 					</section>
 				</form>
