--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -7,11 +7,11 @@
 		<nav>
 			<ul class="nav-list">
 				<li>
-					<a href="/home"><img src="/../../assets/imgs/homeLogo.png" alt="Home"><span>Home</span>
+					<a href="/home"><img src="/../../assets/imgs/homeLogo.png" alt="Home"><span>Accueil</span>
 					</a>
 				</li>
 				<li>
-					<a href="/following"><img src="/../../assets/imgs/friendLogo.png" alt="Friends"><span>Friends</span>
+					<a href="/following"><img src="/../../assets/imgs/friendLogo.png" alt="Friends"><span>Amis</span>
 					</a>
 				</li>
 				<li>
@@ -19,7 +19,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#" id="createButton"><img src="/../../assets/imgs/createLogo.png" alt="Create"><span>Create</span>
+					<a href="#" id="createButton"><img src="/../../assets/imgs/createLogo.png" alt="Create"><span>Crée</span>
 					</a>
 				</li>
 				<li>
