--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -192,6 +192,14 @@ h1 {
 .like-button {
     color: white;
     font-weight: bold;
+    user-select: none;
+    /* Désactive la sélection de texte */
+    -webkit-user-select: none;
+    /* Safari, Chrome */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* IE */
 }
 
 .like-section,
@@ -206,6 +214,29 @@ h1 {
 
     cursor: pointer;
     border-radius: 5px;
+}
+
+#likeModal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);  /* Fond transparent */
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 999; /* Modal doit être derrière la croix */
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 30px;
+    color: #000;
+    cursor: pointer;
+    z-index: 1000; /* Croissant un z-index élevé pour qu'elle soit devant la modal */
 }
 
 .comments-container {
@@ -255,8 +286,10 @@ h1 {
     padding: 10px 15px;
     border-radius: 5px;
     cursor: pointer;
-    display: block; /* Pour s'assurer qu'il prend toute la largeur disponible */
-    margin: 10px auto 0 auto; /* Centre horizontalement avec auto */
+    display: block;
+    /* Pour s'assurer qu'il prend toute la largeur disponible */
+    margin: 10px auto 0 auto;
+    /* Centre horizontalement avec auto */
 }
 
 
