--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -222,11 +222,13 @@ h1 {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);  /* Fond transparent */
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Fond transparent */
     display: none;
     justify-content: center;
     align-items: center;
-    z-index: 999; /* Modal doit être derrière la croix */
+    z-index: 999;
+    /* Modal doit être derrière la croix */
 }
 
 .close {
@@ -236,7 +238,8 @@ h1 {
     font-size: 30px;
     color: #000;
     cursor: pointer;
-    z-index: 1000; /* Croissant un z-index élevé pour qu'elle soit devant la modal */
+    z-index: 1000;
+    /* Croissant un z-index élevé pour qu'elle soit devant la modal */
 }
 
 .comments-container {
@@ -478,6 +481,80 @@ h1 {
     font-size: 0.9em;
     text-align: center;
     z-index: 1001;
+}
+
+.comment-options {
+    position: relative;
+    display: inline-block;
+    left: 90%;
+}
+
+.options-modal {
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.options-content {
+    display: flex;
+    flex-direction: column;
+    background-color: #1e1e1e;
+    position: relative;
+    margin: 15% auto;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
+    text-align: center;
+    color: white;
+}
+
+
+.options-content p {
+    font-size: 16px;
+    margin-bottom: 20px;
+    color: #f1f1f1;
+}
+
+.options-content button {
+    background-color: #444;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    padding: 10px 20px;
+    margin: 10px 0;
+    cursor: pointer;
+}
+
+#closeModalBtn {
+    position: absolute;
+    right: 0;
+    bottom: 75%;
+    background: none;
+}
+
+#editCommentBtn,#cancelDeleteBtn{
+    background-color: aquamarine;
+    color: black;
+}
+
+#deleteCommentBtn,#confirmDeleteBtn{
+    background-color: red;
+    color: white;
+}
+
+.options-btn {
+    color: white;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
 }
 
 
