--- a/public/assets/css/collaboration.css
+++ b/public/assets/css/collaboration.css
@@ -34,7 +34,7 @@ body {
     display: flex;
     flex-direction: row;
     margin-left: 20%;
-    gap: 230px;
+    gap: 30px;
 }
 
 .layout-container {
@@ -90,7 +90,7 @@ body {
 
 .feed-container {
     min-width: 500px;
-    width: 90;
+    width: 90%;
     background-color: #2a2a2a;
     margin-top: 50px;
     border-radius: 8px;
@@ -493,7 +493,7 @@ form button[type="button"] {
 .toggle-sidebar-btn {
     display: none;
     position: fixed;
-    top: 10px;
+    top: 3px;
     right: 10px;
     background-color: aquamarine;
     color: black;
@@ -661,12 +661,13 @@ form button[type="button"] {
     .main-content {
         flex-direction: column;
         align-items: center;
-        margin-left: 0;
         gap: 0;
         width: 100%;
     }
 
     .feed-container {
+        margin-left: 0;
+        margin-right: 15%;
         width: 90%;
         min-width: 400px;
     }
@@ -753,17 +754,38 @@ form button[type="button"] {
     .members-list li img {
         margin-bottom: 10px;
     }
+
+    
 }
 
-@media (min-width: 768px) and (max-width:968px) {
-    .feed-container {
+@media (min-width: 768px) and (max-width:1250px) {
+    .sidebar-container {
         margin-right: 25%;
     }
+
+   
 }
 
-@media(max-width:1510px) {
+/* @media (max-width: 960px) {
+   
+} */
 
+@media(max-width:986px) {
 
+    .feed-container{
+        margin-left: 10%;
+       
+    }
+
+    #containerHeader {
+        display: none;
+    }
+
+    .main-content {
+        margin-left: 2%;
+        margin-right: 10%;
+        gap: 20px;
+    }
 
     .toggle-sidebar-btn {
         display: block;
